--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ span{
     text-align: center;
     padding-bottom: 50rem;
 }
+#aboutLanding{
+    padding: 1rem;
+    border: 1rem;
+}
 #AboutMe{
     text-align:center;
     font-family: 'open sans', sans-serif;
@@ -71,6 +75,11 @@ span{
     font-size: 7rem;
     color: #172a3a;
     text-align: center;
+    
+}
+#skillsLanding{
+    padding: 1.5rem;
+    border: 1rem;
 }
 
 .fab{
@@ -114,6 +123,10 @@ span{
 
 .PortfolioWrapper{
     text-align:center;
+}
+#PortfolioLanding{
+    padding: 1.5rem;
+    border: 1rem;
 }
 
 #Contact{
